<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:elevation="5dp">

    <TextView
        android:id="@+id/tvUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:hint="@string/userId"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:hint="@string/id"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:hint="@string/title"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:hint="@string/complete"
        android:textColor="@color/black"/>
</LinearLayout>